deployment/environments/production/gateways/bedrock-api-route-production.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: bedrock-api
  namespace: production
spec:
  parentRefs:
    - name: external-http
      namespace: infra
  hostnames:
    - bedrock-api.beatlevic.com
  rules:
    - backendRefs:
        - name: api
          port: 80
