deployment/environments/production/gateways/bedrock-web-route-staging.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: bedrock-web
  namespace: staging
spec:
  parentRefs:
    - name: external-http
      namespace: infra
  hostnames:
    - bedrock.beatlevic.dev
  rules:
    - backendRefs:
        - name: web
          port: 80
