deployment/environments/production/gateways/default-route.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: default-backend
  namespace: production
spec:
  parentRefs:
    - kind: Gateway
      name: external-http
      namespace: infra
  rules:
    - backendRefs:
        - name: api
          kind: Service
          namespace: production
          port: 80
